# autopage

./: README.md  autopage.py  pyproject.toml
tests/: test_autopage.py
